--- a/css/templates/customer/customerassignments.less
+++ b/css/templates/customer/customerassignments.less
@@ -151,3 +151,9 @@
 		margin-right: 0.5em;
 	}
 }
+
+.reward-flags {
+	margin-block-start: 0.5em;
+	margin-block-end: 0.5em;
+	padding-inline-start: 1.5em;
+}
