--- a/templates/default/customer/customerassignmentinfoshort.html
+++ b/templates/default/customer/customerassignmentinfoshort.html
@@ -1,3 +1,12 @@
+<style>
+
+	.reward-flags {
+		margin-block-start: 0.5em;
+		margin-block-end: 0.5em;
+		padding-inline-start: 1.5em;
+	}
+
+</style>
 <TABLE class="lmsbox-inner" id="table">
 	<COLGROUP>
 		<COL style="width: 1%;">
@@ -15,7 +24,7 @@
 		</TR>
     </THEAD>
     <TBODY>
-		{if $assignment.flags & $smarty.const.TARIFF_FLAG_REWARD_PENALTY}
+		{if !empty($assignment.flags)}
 		<tr>
 			<td>
 				{if $assignment.value < 0}
@@ -26,13 +35,21 @@
 			</td>
 			<td class="bold nobr">
 				{if $assignment.value < 0}
-					{trans("Reward")}
+					{trans("Reward for")}
 				{else}
-					{trans("Penalty")}
+					{trans("Penalty for")}
 				{/if}
 			</td>
 			<td>
-				{trans("yes")}
+				<ul class="reward-flags">
+					{foreach $_TARIFF_FLAGS as $flag => $label}
+						{if $assignment.flags & flag}
+							<li>
+								<strong>{$label}</strong>
+							</li>
+						{/if}
+					{/foreach}
+				</ul>
 			</td>
 		</tr>
 		{/if}
