--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -2,14 +2,14 @@
 {block name=title}LMS: {$layout.pagetitle|striphtml}{/block}
 {block name=module_content}
 <!--// $Id$ //-->
-<SCRIPT type="text/javascript">
-<!--
+<script>
+
 	function checklimit(elem)
 	{
 		document.forms['tariff'].elements['tariff[' + elem.id + ']'].style.display = elem.checked ? 'none' : '';
 	}
-//-->
-</SCRIPT>
+
+</script>
 {$default_taxrate = ConfigHelper::getConfig('phpui.default_taxrate')}
 <H1>{$layout.pagetitle}</H1>
 <FORM METHOD="POST" NAME="tariff" ACTION="?m=tariffadd">
@@ -32,169 +32,191 @@
 		<TABLE WIDTH="100%" CELLPADDING="0">
 		    <TR>
 			<TD WIDTH="50%" style="vertical-align: top;">
-			    <TABLE WIDTH="100%" CELLPADDING="3">
-				<TR>
-				    <TD WIDTH="1%">
-					<IMG SRC="img/value.gif" ALT="">
-				    </TD>
-				    <TD WIDTH="1%" NOWRAP><B>{trans("Value:")}</B></TD>
-				    <TD WIDTH="98%" NOWRAP>
-					    <INPUT TYPE="TEXT" SIZE="8" NAME="tariff[value]" VALUE="{$tariff.value}" {tip text="Enter value" trigger="value"}>
+			    <table width="100%" cellpadding="3">
+					<colgroup>
+						<col style="width: 1%;">
+						<col style="width: 1%;">
+						<col style="width: 98%;">
+					</colgroup>
 
-						{currency_selection selected=$tariff.currency elementname="tariff[currency]"}
+					<tr>
+						<td>
+							{icon name="value" class="fa-fw"}
+						</td>
+						<td class="bold nobr">
+							{trans("Value:")}
+						</td>
+						<td class="nobr">
+							<input type="text" size="8" name="tariff[value]" value="{$tariff.value}"
+								{tip text="Enter value" trigger="value"}>
 
-						<SELECT size="1" name="tariff[period]" {tip text="Select time period of tariff accounting"}>
-            				<OPTION value=""{if $tariff.period == $key} SELECTED{/if}>{trans("undefined")}</OPTION>
-				            {foreach from=$_PERIODS key=key item=item}{if $key != $smarty.const.DISPOSABLE}
-            				<OPTION value="{$key}"{if $tariff.period == $key} SELECTED{/if}>{$item}</OPTION>
-			            	{/if}{/foreach}
-			            </SELECT>
+							{currency_selection selected=$tariff.currency elementname="tariff[currency]"}
 
-						<label>
-							<input type="checkbox" name="tariff[flags][{$smarty.const.TARIFF_FLAG_REWARD_PENALTY}]"
-								value="{$smarty.const.TARIFF_FLAG_REWARD_PENALTY}"
-								{if isset($tariff.flags[$smarty.const.TARIFF_FLAG_REWARD_PENALTY])}checked{/if}
-								{tip text="If tariff value is negative then this is effectively penalty flag, otherwise it is reward flag"}>
-							{trans("reward/penalty")}
-						</label>
-				    </TD>
-				</TR>
+							<select size="1" name="tariff[period]" {tip text="Select time period of tariff accounting"}>
+								<option value=""{if $tariff.period == $key} selected{/if}>{trans("undefined")}</option>
+								{foreach from=$_PERIODS key=key item=item}
+									{if $key != $smarty.const.DISPOSABLE}
+										<option value="{$key}"{if $tariff.period == $key} selected{/if}>{$item}</option>
+									{/if}
+								{/foreach}
+							</select>
+						</td>
+					</tr>
 
-				<tr>
-					<TD>
-						<IMG SRC="img/tax.gif" ALT="">
-					</TD>
-					<TD class="bold nobr">
-						<label for="splitpayment">
-							{trans("Split payment:")}
-						</label>
-					</TD>
-					<td>
-						<input type="checkbox" id="splitpayment" name="tariff[splitpayment]" value="1"{if $tariff.splitpayment} checked{/if}>
-					</td>
-				</tr>
-
-				<tr>
-					<TD>
-						<IMG SRC="img/tax.gif" ALT="">
-					</TD>
-					<TD class="bold nobr">
-						<label for="taxcategory">
-							{trans("Tax category:")}
-						</label>
-					</TD>
-					<td>
-						{tax_category_selection id="taxcategory" elementname="tariff[taxcategory]"
-							selected=$tariff.taxcategory tip="Select tax category"}
-					</td>
-				</tr>
-
-				<TR>
-				    <TD WIDTH="1%">
-						<IMG SRC="img/tax.gif" ALT="">
-				    </TD>
-				    <TD WIDTH="1%" NOWRAP><B>{trans("Tax:")}</B></TD>
-				    <TD WIDTH="98%">
-						<SELECT SIZE="1" NAME="tariff[taxid]" {tip text="Select Tax rate" trigger="taxid"}{if empty($taxeslist)} required{/if}>
-							{foreach $taxeslist as $tax}
-								<OPTION VALUE="{$tax.id}"{if $tax.value == $default_taxrate || $tax.id == $tariff.taxid} selected{/if}>{$tax.label}</OPTION>
-							{foreachelse}
-								<option value="">{trans("- no tax rates defined -")}</option>
+					<tr>
+						<td>
+							{icon name="document" class="fa-fw"}
+						</td>
+						<td>
+							{trans("Rewards/penalties")}
+						</td>
+						<td>
+							{foreach $_TARIFF_FLAGS as $flag => $label}
+								<label {tip text="If tariff value is negative then this is effectively penalty flag, otherwise it is reward flag"}>
+									<input type="checkbox" name="tariff[flags][{$flag}]" value="{$flag}"
+										{if isset($tariff.flags[$flag])} checked{/if}>
+									{$label}
+								</label>
+								{if !$label@last}<br>{/if}
 							{/foreach}
-						</SELECT>
-				    </TD>
-				</TR>
-				<TR>
-				    <TD WIDTH="1%">
-					<IMG SRC="img/money.gif" alt="">
-				    </TD>
-				    <TD WIDTH="1%" nowrap><B>{trans("Type:")}</B></TD>
-				    <TD WIDTH="98%">
-					<SELECT SIZE="1" ID="tariff-type" NAME="tariff[type]" {tip text="Select tariff type" trigger="type"}>
-					{foreach item=item from=$_SERVICETYPES key=key}
-					    <OPTION VALUE="{$key}"{if $tariff.type == $key} selected{/if}>{$item}</OPTION>
-					{/foreach}
-					</SELECT>
-				    </TD>
-				</TR>
-				<TR>
-					<TD><i class="lms-ui-icon-tags"></i></TD>
-					<TD class="bold">{trans("Tags:")}</TD>
-					<TD>
-						<SELECT ID="tariff-tags" SIZE="1" NAME="tariff[tags][]"
-								{tip class="lms-ui-multiselect" text="Select tariff tags" trigger="tags"} multiple>
-							{foreach $tarifftags as $tarifftag}
-								<OPTION VALUE="{$tarifftag.id}"{if isset($tariff.tags) && isset($tariff.tags[$tarifftag.id])} selected{/if}>{$tarifftag.name}</OPTION>
-							{/foreach}
-						</SELECT>
-					</TD>
-				</TR>
-				<TR>
-					<TD>
-						<IMG src="img/calendar.gif" alt="">
-					</TD>
-					<TD class="bold">
-						{trans("Period:")}
-					</TD>
-					<TD class="nobr">
-						{trans("from:")}
-						<INPUT type="TEXT" name="tariff[datefrom]" value="{if $tariff.datefrom}{$tariff.datefrom}{/if}" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter tariff start date in YYYY/MM/DD format. If you don't want to define 'From' date leave this field empty" trigger="datefrom"} SIZE="10">
-						{trans("to:")}
-						<INPUT type="TEXT" name="tariff[dateto]" value="{if $tariff.dateto}{$tariff.dateto}{/if}" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter tariff end date in YYYY/MM/DD format. Leave this field empty if you don't want to set expiration date" trigger="dateto"} SIZE="10">
-					</TD>
-				</TR>
-				<TR>
-					<TD style="width: 1%;">
+						</td>
+					</tr>
+
+					<tr>
+						<TD>
+							<IMG SRC="img/tax.gif" ALT="">
+						</TD>
+						<TD class="bold nobr">
+							<label for="splitpayment">
+								{trans("Split payment:")}
+							</label>
+						</TD>
+						<td>
+							<input type="checkbox" id="splitpayment" name="tariff[splitpayment]" value="1"{if $tariff.splitpayment} checked{/if}>
+						</td>
+					</tr>
+
+					<tr>
+						<TD>
+							<IMG SRC="img/tax.gif" ALT="">
+						</TD>
+						<TD class="bold nobr">
+							<label for="taxcategory">
+								{trans("Tax category:")}
+							</label>
+						</TD>
+						<td>
+							{tax_category_selection id="taxcategory" elementname="tariff[taxcategory]"
+								selected=$tariff.taxcategory tip="Select tax category"}
+						</td>
+					</tr>
+
+					<TR>
+						<TD WIDTH="1%">
+							<IMG SRC="img/tax.gif" ALT="">
+						</TD>
+						<TD WIDTH="1%" NOWRAP><B>{trans("Tax:")}</B></TD>
+						<TD WIDTH="98%">
+							<SELECT SIZE="1" NAME="tariff[taxid]" {tip text="Select Tax rate" trigger="taxid"}{if empty($taxeslist)} required{/if}>
+								{foreach $taxeslist as $tax}
+									<OPTION VALUE="{$tax.id}"{if $tax.value == $default_taxrate || $tax.id == $tariff.taxid} selected{/if}>{$tax.label}</OPTION>
+								{foreachelse}
+									<option value="">{trans("- no tax rates defined -")}</option>
+								{/foreach}
+							</SELECT>
+						</TD>
+					</TR>
+					<TR>
+						<TD WIDTH="1%">
 						<IMG SRC="img/money.gif" alt="">
-					</TD>
-					<TD style="width: 1%;" class="bold nobr">
-						{trans("Numbering Plan:")}
-					</TD>
-					<TD style="width: 98%;">
-						<SELECT name="tariff[numberplanid]" {tip text="Select numbering plan"}>
-							<OPTION value=""{if !$tariff.numberplanid} selected{/if}>- {trans("default")} -</OPTION>
-							{foreach $numberplanlist as $plan}
-							{assign var=period value=$plan.period}
-							<OPTION value="{$plan.id}"{if $plan.id == $tariff.numberplanid} selected{/if}>{$plan.template} ({$_NUM_PERIODS.$period})</OPTION>
-							{/foreach}
-						</SELECT>
-					</TD>
-				</TR>
-				<TR>
-				    <TD WIDTH="1%">
-					<IMG SRC="img/class.gif" ALT="">
-				    </TD>
-				    <TD WIDTH="1%" NOWRAP><B>{trans("Product ID:")}</B></TD>
-				    <TD WIDTH="98%">
-					<INPUT TYPE="TEXT" SIZE="8" NAME="tariff[prodid]" VALUE="{$tariff.prodid}" {tip text="Enter Product ID number (optional)" trigger="prodid"}>
-				    </TD>
-				</TR>
-				<TR>
-					<TD>
-						<img src="img/netdev.gif" alt="">
-					</TD>
-					<TD class="bold nobr">
-						{trans("Purpose:")}
-					</TD>
-					<TD class="nobr">
-						{foreach $_SESSIONTYPES as $idx => $sessiontype}
-						<label>
-							<INPUT TYPE="checkbox" NAME="tariff[authtype][{$idx}]" value="{$idx}" id="authtype{$idx}" {tip text="`$sessiontype.tip`" trigger="authtype`$idx`"}{if ($tariff.authtype & $idx) == $idx} checked{/if}>
-							{$sessiontype.label}
-						</label><br>
+						</TD>
+						<TD WIDTH="1%" nowrap><B>{trans("Type:")}</B></TD>
+						<TD WIDTH="98%">
+						<SELECT SIZE="1" ID="tariff-type" NAME="tariff[type]" {tip text="Select tariff type" trigger="type"}>
+						{foreach item=item from=$_SERVICETYPES key=key}
+							<OPTION VALUE="{$key}"{if $tariff.type == $key} selected{/if}>{$item}</OPTION>
 						{/foreach}
-					</TD>
-				</TR>
-				<TR>
-				    <TD WIDTH="1%">
-					<IMG SRC="img/info1.gif" ALT="">
-				    </TD>
-				    <TD WIDTH="1%"><B>{trans("Description:")}</B></TD>
-				    <TD WIDTH="98%">
-					<TEXTAREA NAME="tariff[description]" COLS="45" ROWS="4" {tip text="Enter additional information (optional)"}>{$tariff.description}</TEXTAREA>
-				    </TD>
-				</TR>
-			</TABLE>
+						</SELECT>
+						</TD>
+					</TR>
+					<TR>
+						<TD><i class="lms-ui-icon-tags"></i></TD>
+						<TD class="bold">{trans("Tags:")}</TD>
+						<TD>
+							<SELECT ID="tariff-tags" SIZE="1" NAME="tariff[tags][]"
+									{tip class="lms-ui-multiselect" text="Select tariff tags" trigger="tags"} multiple>
+								{foreach $tarifftags as $tarifftag}
+									<OPTION VALUE="{$tarifftag.id}"{if isset($tariff.tags) && isset($tariff.tags[$tarifftag.id])} selected{/if}>{$tarifftag.name}</OPTION>
+								{/foreach}
+							</SELECT>
+						</TD>
+					</TR>
+					<TR>
+						<TD>
+							<IMG src="img/calendar.gif" alt="">
+						</TD>
+						<TD class="bold">
+							{trans("Period:")}
+						</TD>
+						<TD class="nobr">
+							{trans("from:")}
+							<INPUT type="TEXT" name="tariff[datefrom]" value="{if $tariff.datefrom}{$tariff.datefrom}{/if}" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter tariff start date in YYYY/MM/DD format. If you don't want to define 'From' date leave this field empty" trigger="datefrom"} SIZE="10">
+							{trans("to:")}
+							<INPUT type="TEXT" name="tariff[dateto]" value="{if $tariff.dateto}{$tariff.dateto}{/if}" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter tariff end date in YYYY/MM/DD format. Leave this field empty if you don't want to set expiration date" trigger="dateto"} SIZE="10">
+						</TD>
+					</TR>
+					<TR>
+						<TD style="width: 1%;">
+							<IMG SRC="img/money.gif" alt="">
+						</TD>
+						<TD style="width: 1%;" class="bold nobr">
+							{trans("Numbering Plan:")}
+						</TD>
+						<TD style="width: 98%;">
+							<SELECT name="tariff[numberplanid]" {tip text="Select numbering plan"}>
+								<OPTION value=""{if !$tariff.numberplanid} selected{/if}>- {trans("default")} -</OPTION>
+								{foreach $numberplanlist as $plan}
+								{assign var=period value=$plan.period}
+								<OPTION value="{$plan.id}"{if $plan.id == $tariff.numberplanid} selected{/if}>{$plan.template} ({$_NUM_PERIODS.$period})</OPTION>
+								{/foreach}
+							</SELECT>
+						</TD>
+					</TR>
+					<TR>
+						<TD WIDTH="1%">
+						<IMG SRC="img/class.gif" ALT="">
+						</TD>
+						<TD WIDTH="1%" NOWRAP><B>{trans("Product ID:")}</B></TD>
+						<TD WIDTH="98%">
+						<INPUT TYPE="TEXT" SIZE="8" NAME="tariff[prodid]" VALUE="{$tariff.prodid}" {tip text="Enter Product ID number (optional)" trigger="prodid"}>
+						</TD>
+					</TR>
+					<TR>
+						<TD>
+							<img src="img/netdev.gif" alt="">
+						</TD>
+						<TD class="bold nobr">
+							{trans("Purpose:")}
+						</TD>
+						<TD class="nobr">
+							{foreach $_SESSIONTYPES as $idx => $sessiontype}
+							<label>
+								<INPUT TYPE="checkbox" NAME="tariff[authtype][{$idx}]" value="{$idx}" id="authtype{$idx}" {tip text="`$sessiontype.tip`" trigger="authtype`$idx`"}{if ($tariff.authtype & $idx) == $idx} checked{/if}>
+								{$sessiontype.label}
+							</label><br>
+							{/foreach}
+						</TD>
+					</TR>
+					<TR>
+						<TD WIDTH="1%">
+						<IMG SRC="img/info1.gif" ALT="">
+						</TD>
+						<TD WIDTH="1%"><B>{trans("Description:")}</B></TD>
+						<TD WIDTH="98%">
+						<TEXTAREA NAME="tariff[description]" COLS="45" ROWS="4" {tip text="Enter additional information (optional)"}>{$tariff.description}</TEXTAREA>
+						</TD>
+					</TR>
+				</table>
 		    </TD>
 		    <TD WIDTH="50%" VALIGN="top" ID="tariff-capacity-settings">
 			<TABLE WIDTH="100%" CELLPADDING="3">
