enhancement: new reward/penalty tariff flags: e-mail marketing and sms marketing (bitwise operation fixes)

--- a/templates/default/customer/customerassignmentinfoshort.html
+++ b/templates/default/customer/customerassignmentinfoshort.html
@@ -43,7 +43,7 @@
 			<td>
 				<ul class="reward-flags">
 					{foreach $_TARIFF_FLAGS as $flag => $label}
-						{if $assignment.flags & flag}
+						{if intval($assignment.flags) & intval($flag)}
 							<li>
 								<strong>{$label}</strong>
 							</li>
