--- a/templates/default/document/documenttemplateoptions.html
+++ b/templates/default/document/documenttemplateoptions.html
@@ -2,5 +2,5 @@
 {foreach $docengines as $templatename => $docengine}
     <option value="{$docengine.name}"
         {if isset($docengine['reference-document-required']) && !empty($docengine['reference-document-required'])} data-refdoc-required="1"{/if}
-        {if $document.templ == $doctemplate} selected{/if}>{$docengine.title}</option>
+        {if $document.templ == $templatename} selected{/if}>{$docengine.title}</option>
 {/foreach}
