enhancement: new reward/penalty tariff flags: e-mail marketing and sms marketing (fixed ui labels)

--- a/templates/default/tariff/tariffedit.html
+++ b/templates/default/tariff/tariffedit.html
@@ -103,7 +103,7 @@
                                     {icon name="document" class="fa-fw"}
                                 </td>
                                 <td>
-                                    {trans("Rewards/penalties")}
+                                    {trans("Reward/penalty for")}
                                 </td>
                                 <td>
                                     {foreach $_TARIFF_FLAGS as $flag => $label}
