--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -68,7 +68,7 @@
 							{icon name="document" class="fa-fw"}
 						</td>
 						<td>
-							{trans("Rewards/penalties")}
+							{trans("Reward/penalty for")}
 						</td>
 						<td>
 							{foreach $_TARIFF_FLAGS as $flag => $label}
