--- a/userpanel/modules/documents/style/bclean/templates/documents.html
+++ b/userpanel/modules/documents/style/bclean/templates/documents.html
@@ -127,9 +127,9 @@
 								<div class="row document-attachment">
 									<div class="col-md-auto">
 											{if $docattach.type == 1}
-												{button class="btn btn-primary" href="?m=documents&f=docview&id={$doc.id}&attachmentid={$docattach.id}" target="_blank" icon="view" label="View"}
+												{button class="btn btn-primary" href="?m=documents&f=docview&id={$doc.id}&attachmentid={$docattach.id}" external="_blank" icon="view" label="View"}
 											{else}
-												{button class="btn btn-primary" href="?m=documents&f=docview&id={$doc.id}&attachmentid={$docattach.id}" target="_blank" icon="document" label="{$docattach.filename}"}
+												{button class="btn btn-primary" href="?m=documents&f=docview&id={$doc.id}&attachmentid={$docattach.id}" external="_blank" icon="document" label="{$docattach.filename}"}
 											{/if}
 										{if !$doc.closed && $docattach.type == 1 && $doc.confirmdate != -1}
 											{if $scan_active}
