--- a/userpanel/modules/finances/style/bclean/templates/userbalancebox.html
+++ b/userpanel/modules/finances/style/bclean/templates/userbalancebox.html
@@ -95,7 +95,7 @@
 									{if isset($link.extra)}{$link.extra}{/if}
 								{/foreach}
 								{if $item.doctype == $smarty.const.DOC_INVOICE || $item.doctype == $smarty.const.DOC_CNOTE}
-									{button class="btn btn-primary btn-sm" onclick="reset_login_timeout(); location.href='?m=finances&f=invoice&id={$item.docid}'" target="_blank" icon="print" label="Print"}
+									{button class="btn btn-primary btn-sm" onclick="reset_login_timeout(); location.href='?m=finances&f=invoice&id={$item.docid}'" external="_blank" icon="print" label="Print"}
 								{else}
 									&nbsp;
 								{/if}
@@ -124,9 +124,9 @@
 						<tr>
 							<td colspan="5">
 								{if $aggregate_documents}
-									{button type="submit" class="btn btn-primary" formaction="?m=finances&aggregate_documents=0#userbalancebox" target="_self" icon="document" label="Don't aggregate documents"}
+									{button type="submit" class="btn btn-primary" formaction="?m=finances&aggregate_documents=0#userbalancebox" external="_self" icon="document" label="Don't aggregate documents"}
 								{else}
-									{button type="submit" class="btn btn-primary" formaction="?m=finances&aggregate_documents=1#userbalancebox" target="_self" icon="document" label="Aggregate documents"}
+									{button type="submit" class="btn btn-primary" formaction="?m=finances&aggregate_documents=1#userbalancebox" external="_self" icon="document" label="Aggregate documents"}
 								{/if}
 							</td>
 							<td colspan="2" class="text-center">
